--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/html2canvas": "0.0.35",
+    "express": "^4.16.4",
+    "html2canvas": "^1.0.0-alpha.12",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
     "vue-class-component": "^6.0.0",
