--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@handsontable/vue": "^3.1.0",
     "@types/html2canvas": "0.0.35",
     "express": "^4.16.4",
+    "handsontable": "^6.2.2",
     "html2canvas": "^1.0.0-alpha.12",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
